--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 groups:
-  md_5:
+  ErikJan75:
   - admin
 disabled_commands:
 - disabledcommandhere
@@ -15,7 +15,7 @@ permissions:
   - bungeecord.command.ip
   - bungeecord.command.reload
 listeners:
-- query_port: 25577
+- query_port: 25565
   motd: '&1Another Bungee server'
   tab_list: GLOBAL_PING
   query_enabled: false
@@ -25,7 +25,7 @@ listeners:
   default_server: lobby
   bind_local_address: true
   fallback_server: lobby
-  host: 0.0.0.0:25577
+  host: 0.0.0.0:25565
   max_players: 1
   tab_size: 60
   force_default_server: false
@@ -34,7 +34,7 @@ connection_throttle: 4000
 servers:
   lobby:
     motd: '&1Just another BungeeCord - Forced Host'
-    address: localhost:25565
+    address: localhost:25566
     restricted: false
 ip_forward: false
 online_mode: true
