--- a/config.yml
+++ b/config.yml
@@ -15,7 +15,7 @@ permissions:
   - bungeecord.command.ip
   - bungeecord.command.reload
 listeners:
-- query_port: 25565
+- query_port: 25577
   motd: '&1Another Bungee server'
   tab_list: GLOBAL_PING
   query_enabled: false
@@ -33,8 +33,8 @@ timeout: 30000
 connection_throttle: 4000
 servers:
   lobby:
-    motd: '&1Just another BungeeCord - Forced Host'
-    address: localhost:25566
+    motd: '&1Start minecraft modding'
+    address: minecraft-server.minecraft.svc.cluster.local:25565
     restricted: false
 ip_forward: false
 online_mode: true
